Fix gallery not showing on Chrome and grid sizes on IE11

--- a/css/grid.css
+++ b/css/grid.css
@@ -10,28 +10,30 @@
     grid-auto-flow: dense;
   }
 
+  .gallery {
+    display: grid;
+    grid-gap: 0;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-auto-flow: dense;
+    align-items: stretch;
+  }
+
+  .gallery__item {
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .vertical {
+    grid-row: span 2;
+  }
+
   @media screen and (max-width: 599px) {
     .grid {
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     }
-  }
 
-  @media screen and (min-width: 600px) {
     .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      grid-auto-flow: dense;
-      grid-gap: 0;
-    }
-
-    .gallery__item {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    .vertical {
-      grid-row: span 2;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     }
   }
 }
